getting gulp to work again, pt.2

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -259,9 +259,10 @@ blockquote {
     z-index: 0;
 }
 
-#footerFooter {
-    text-align: center;
-}
+// #footerFooter {
+//     width:
+//  //   text-align: center;
+// }
 
 .navItem {
     float:left;
