saving the S/CSS

--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -201,6 +201,8 @@ blockquote {
   clear: both;
   border-top: 2px solid #D3D3D3;
   text-align: center;
+  height: 600px;
+  color: #0B3551;
 }
 
 #footerHeader {
@@ -226,7 +228,9 @@ blockquote {
 }
 
 #footerFooter {
-  text-align: center;
+  background-color: #0B3551;
+  clear: both;
+  height: 100;
 }
 
 .navItem {
