--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -35,10 +35,12 @@ header {
     margin-top: 1%;
 }
 
+$navyish: #083451;
+
 #button1 {
     float:right;
     text-decoration: none;
-    color: #083451;
+    color: $navyish;
     margin-right: 20px;
     margin-top: 2%;
     font-size: 17px;
@@ -49,7 +51,7 @@ header {
 #button2 {
     float:right;
     text-decoration: none;
-    color: #083451;
+    color: $navyish;
     margin-right:12%;
     margin-top: 2%;
     font-size: 17px;
@@ -64,7 +66,7 @@ header {
     margin-top: 2%;
     /*font-family: 'PT Sans', sans-serif;*/
     font-family: 'Oswald', sans-serif;
-    color: #083451;
+    color: $navyish;
     font-size: 17px;
     z-index: 2;
     font-style: bold;
@@ -78,7 +80,7 @@ header {
     text-align:center;
     /*border: 2px solid blue;*/
     color: white;
-    text-shadow: #083451 .01em .01em .01em;
+    text-shadow: $navyish .01em .01em .01em;
     font-size: 6.35em;
     font-family: 'PT Sans', sans-serif;
 }
