add button mousover to css

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -114,6 +114,11 @@ $navyish: #083451;
     padding-top: 4%;
 }
 
+button {
+    cursor: pointer;
+    
+}
+
 #fantHead { 
     font-family: 'Oswald' sans-serif;
     font-style: none;
