change foot size; change some button structure in html

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -116,7 +116,6 @@ $navyish: #083451;
 
 button {
     cursor: pointer;
-    
 }
 
 #fantHead { 
@@ -281,7 +280,7 @@ blockquote {
 #footerFooter {
     background-color: #0B3551;
     clear: both;
-    height: 100%;
+    height: 150px;
 
 }
 
